# cppnum

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: array.hpp  broadcasting.hpp  cppnum.h  dtypes.hpp  linalg.hpp  operations.hpp  shape.hpp
src/: array.cpp
